# shockabo

./: .env.example  .gitignore  Dockerfile  FINAL_VALIDATION_REPORT.md  MIT_TTT_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_VALIDATION_SUMMARY.md  PLATFORM_COMPATIBILITY_REPORT.md  PLATFORM_COMPATIBILITY_SUMMARY.md  README.md  REAL_DATASET_VALIDATION_SUMMARY.md  TECHNICAL_ITEMS_COMPLETION_REPORT.md  configuration_override_report_20250913_090929.json  data_model_loading_report_colab_20250913_091344.json  data_model_loading_report_kaggle_20250913_091145.json  download_arc_data.py  download_real_arc_tasks.py  execute_task3_training.py  gpu_memory_compatibility_report_20250913_090707.json  mypy.ini  performance_test.py  platform_compatibility_report_colab_20250913_090326.json  platform_compatibility_report_kaggle_20250913_085933.json  platform_compatibility_report_kaggle_20250913_090245.json  platform_setup_validator.py  platform_validation_report_kaggle_20250913_091927.json  pyproject.toml  quick_task6_validation.py  quick_ttt_analysis.py  real_dataset_validation.py  requirements.txt  test_8b_qlora_loading.py  test_8b_qlora_results.json  test_configuration_overrides.py  test_data_model_loading.py  test_end_to_end_validation.py  test_error_handling.py  test_gpu_memory_configurations.py  test_lora_conv1d_fix.py  test_pipeline_100_tasks.py  test_platform_compatibility.py  (+11 more)
.ai/: debug-log.md
.bmad-core/: install-manifest.yaml
.claude/agents/: kaggle-expert.md  response-sound-notifier.md
.github/chatmodes/: kaggle-expert.chatmode.md  response-sound-notifier.chatmode.md
.github/workflows/: ci.yml
.qwen/bmad-method/: QWEN.md
.serena/: project.yml
.serena/memories/: arc-prize-2025-bmad-development-plan.md  arc_prize_brainstorm_strategies.md  code_style_and_conventions.md  comprehensive_llm_strategy_arc_prize_2025.md  critical_assumptions_arc_2025.md  epic_1_complete_parallel_plan_post_story_14.md  epic_1_detailed_parallel_execution_plan.md  epic_1_revised_plan_post_story_14.md  epic_parallel_work_streams.md  gpt5_release_update_2025.md  latest_llm_models_2025_research.md  novel_architecture_ideas_arc_2025.md  prd_completion_summary.md  project_purpose.md  suggested_commands.md  task_completion_workflow.md  tech_stack_and_dependencies.md  validated_ttt_assumptions_2025.md  zero_budget_execution_strategy.md
arc-prize-2025/: ARC_Prize_2025_Comprehensive_Analysis.md  data_description.md  data_download_info.json  description.md  embedded_links.json  kaggle_expert_agent_log.md  last_updated.txt  linked_content.json  overview.json  processing_log.json  rules.md
arc-prize-2025/linked_content_md/: README.md
configs/: colab.yaml  development.yaml  health_check.yaml  kaggle.yaml  paperspace.yaml  production.yaml
configs/strategies/: evolution.yaml  gpu_evaluation.yaml  llm_routing.yaml  program_cache.yaml  ttt.yaml  (+1 more)
data/: .gitkeep
docs/: bandit-hyperparameters.md  configurable_thresholds_implementation.md  distributed-evolution-tuning.md  email_notifier_usage.md  evolution_troubleshooting.md  future-enhancements.md  genetic_algorithm_api.md  performance_baseline_implementation_summary.md  performance_regression_detection_summary.md  profiling_guide.md
examples/: batch_wandb_usage.py  distributed_evolution_example.py  evolution_example.py  performance_regression_demo.py  process_pooling_example.py  profiling_example.py
kaggle_notebooks/: enhanced_ttt_gpu_validation.ipynb  minimal_test_fallback.py
logs/: .gitkeep
output/: .gitkeep
scripts/: __init__.py  analyze_evolution_runs.py  analyze_validation_tasks.py  benchmark_distributed_evolution.py  checkpoint_recovery.py  configure_branch_protection.py  configure_early_stopping.py  create_performance_baselines.py  demo_early_stopping.py  hello_arc.py  inference_benchmark.py  performance_comparison.py  platform_rotation.py  run_advanced_dsl_tests.py  run_dsl_tests.py  select_validation_tasks.py  start_with_health_demo.py  test_email_notifier.py  test_health_endpoints.py  test_performance_baselines.py  test_ttt_implementation.py  validate_early_stopping.py  validate_pruning_performance.py  verify_advanced_dsl_operations.py
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_ttt_integration.py
validation_results/: infrastructure_report_20250913_090806.txt  infrastructure_test_20250913_090806.json  real_dataset_validation_20250913_081156.json  real_dataset_validation_20250913_081233.json  real_dataset_validation_report_20250913_081156.txt  real_dataset_validation_report_20250913_081233.txt  validation_report_20250913_084913.txt  validation_report_20250913_085906.txt  validation_report_20250913_090032.txt  validation_report_20250913_090439.txt  validation_report_20250913_090609.txt  validation_results_20250913_084913.json  validation_results_20250913_085906.json  validation_results_20250913_090032.json  validation_results_20250913_090439.json  validation_results_20250913_090609.json
(+401 files in other folders)
